<resources>
    <string name="app_name">App_v1</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="msg_subscribed">Subscribed!</string>
    <string name="msg_unsubscribed">Unsubscribed!</string>
    <string name="msg_subscribe_failed">Subscription failed</string>

    <!-- Miscellaneous -->
    <string name="symbol_temperature">\u2103</string>
    <string name="symbol_humidity">%</string>
    <string name="symbol_co2">ppm</string>
    <string name="title_loading">Loading</string>

    <!-- Dashboard activity/fragment -->
    <!-- Dummy data -->
    <string name="value_temperature">25.5</string>
    <string name="value_humidity">35</string>
    <string name="value_co2">650</string>
    <string name="value_measurement_time">12:05:00"</string>
    <string name="value_measurement_date">03-May-19</string>
    <string name="value_min_device_alarm_temp_threshold">15.8</string>
    <string name="value_max_device_alarm_temp_threshold">34.7</string>
    <string name="value_min_device_alarm_hum_threshold">10</string>
    <string name="value_max_device_alarm_hum_threshold">80</string>
    <string name="value_min_device_alarm_co2_threshold">200</string>
    <string name="value_max_device_alarm_co2_threshold">1400</string>
    <string name="value_last_updated">12:42/03-May-19</string>

    <string name="title_temperature_display">Temperature Overview:</string>
    <string name="title_humidity_display">Humidity Overview:</string>
    <string name="title_co2_display">CO2 Overview:</string>
    <string name="title_latest_value">Latest value:</string>
    <string name="title_measurement_time">Time:</string>
    <string name="title_measurement_date">Date:"</string>
    <string name="title_last_updated">Last updated:</string>
    <string name="title_recent_values">Latest Values:</string>
    <string name="title_thresholds">Threshold Settings:</string>
    <string name="title_device_alarm_thresholds">Triggers set to:</string>
    <string name="title_min_threshold">Min:</string>
    <string name="title_max_threshold">Max:</string>
    <string name="title_radio_list">List</string>
    <string name="title_radio_graph">Graph</string>
    <string name="title_no_data_available">No data available for the selected greenhouse!</string>

    <!-- Measurement history activity -->
    <!-- Dummy data -->
    <string name="title_select_date_range">Select date range:</string>
    <string name="value_select_datetime_from">5/4/2019</string>
    <string name="value_select_datetime_to">5/6/2019</string>
    <string name="value_datetime_from_to">12/10/2019 &#8212; 12/20/2019</string>
    <string name="value_time">12:00</string>

    <string name="title_temperature">Temperature</string>
    <string name="title_humidity">Humidity</string>
    <string name="title_co2">Co2</string>
    <string name="title_click_select">Click to select</string>
    <string name="title_select">Select</string>
    <string name="title_select_time_from">Time from:</string>
    <string name="title_select_time_to">Time to:</string>
    <string name="title_measurement_history">History:</string>
    <string name="title_no_results_found">Oops, no results found.</string>
    <string name="title_button_show_history">Go</string>

    <!-- Greenhouse Select -->
    <string name="gs_text_title">Select Your Greenhouse</string>
    <string name="gs_text_explainer">Select the greenhouse you want to manage from the dropdown below:</string>
    <string name="gs_button_go">Go</string>

    <!--Log In-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in_button">Log In</string>
    <string name="title_activity_settings">Settings</string>
    <string name="check_box">Remember email</string>


    <!-- Preference Titles -->
    <string name="notifications">Notifications</string>
    <string name="enable_notifications">Enable message notifications</string>

    <!-- Thresholds settings -->
    <string name="set_range">Set range</string>
    <string name="max">Max:</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="min">Min:</string>
    <string name="_00_0">00.0</string>
    <string name="threshHint">value between 1.0 - 60.0</string>


</resources>
