<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="3.3dp"
    android:background="@color/lightGray">

    <TextView
        android:id="@+id/measurementRVItemValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:padding="5dp"
        android:text="@string/value_temperature"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:fontFamily="sans-serif-light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/measurementRVItemSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symbol_temperature"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:fontFamily="sans-serif-light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/measurementRVItemValue"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/measurementRVItemTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/value_measurement_time"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:fontFamily="sans-serif-light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/measurementRVItemDate"
        app:layout_constraintStart_toEndOf="@+id/measurementRVItemSymbol"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/measurementRVItemDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/value_measurement_date"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:fontFamily="sans-serif-light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529" />

</androidx.constraintlayout.widget.ConstraintLayout>