<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ToggleButton
                android:id="@+id/toggleBtnHistoryDisplay"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="5dp"
                android:background="@color/colorPrimaryDark"
                android:stateListAnimator="@null"
                android:textOff=""
                android:textOn=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleMeasurementType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="5dp"
                android:includeFontPadding="false"
                android:text="@string/title_measurement_history"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/titleMeasurementType"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/measurementHistoryDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/title_select_date_range"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <Button
                    android:id="@+id/btnOpenCalendarDialog"
                    android:layout_width="240dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/title_select"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    app:layout_constraintStart_toEndOf="@+id/textView9"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/title_select_time_from"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnOpenCalendarDialog" />

                <Button
                    android:id="@+id/btnSelectTimeFrom"
                    android:layout_width="120dp"
                    android:layout_height="55dp"
                    android:textSize="15sp"
                    android:text="@string/title_select"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/title_select_time_to"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/textView10"
                    app:layout_constraintTop_toBottomOf="@+id/btnOpenCalendarDialog" />

                <Button
                    android:id="@+id/btnSelectTimeTo"
                    android:layout_width="120dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="7dp"
                    android:text="@string/title_select"
                    android:textSize="15sp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/btnSelectTimeFrom"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <ImageButton
                    android:id="@+id/btnSearchHistory"
                    android:layout_width="65dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="5dp"
                    android:adjustViewBounds="true"
                    android:backgroundTint="@color/white"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_search"
                    app:layout_constraintStart_toEndOf="@+id/btnSelectTimeTo"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <ImageButton
                    android:id="@+id/btnClearSearchParams"
                    android:layout_width="65dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="6dp"
                    android:backgroundTint="@color/white"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_clear"
                    app:layout_constraintStart_toEndOf="@+id/btnSearchHistory"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/measurementHistoryLoadingScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:padding="12dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/progressBarThresholds"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:indeterminate="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/title_loading"
                android:textColor="@color/black"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/progressBarThresholds"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noMeasurementHistoryDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/title_no_results_found"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMeasurementHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>

</LinearLayout>